--- a/README.org
+++ b/README.org
@@ -48,17 +48,13 @@ When you invoke `C-c C-s` (now bound to `org-natural-dates-schedule`), you will 
 If you provide a prefix argument (e.g., `C-u C-c C-s`), the command will fall back to the standard `org-schedule` behavior (e.g., to remove a scheduled date or use the calendar).
 
 *** Org Capture Integration
-You can also use this package to capture tasks with natural dates in one go.
+You can seamlessly integrate natural date parsing into your existing `org-capture` workflows. If you add our hook, you can type tasks like `* TODO Brush teeth every day at 5pm` during standard capture (`C-c c`), and when you finalize it (`C-c C-c`), the headline will automatically be cleaned up to `* TODO Brush teeth` and the correct `SCHEDULED:` or `DEADLINE:` timestamp will be inserted.
 
 #+BEGIN_SRC elisp
-(add-to-list 'org-capture-templates
-             '("n" "Natural Task" entry (file+headline "~/gtd/inbox.org" "Tasks")
-               "* TODO %(org-natural-dates-get :text)\n%(org-natural-dates-get-timestamp-line)\n:PROPERTIES:\n:CREATED: %U\n:END:\n"))
-
-(global-set-key (kbd "C-c n") 'org-natural-dates)
+(add-hook 'org-capture-before-finalize-hook 'org-natural-dates-capture-finalize-hook)
 #+END_SRC
 
-Press `C-c n`, type "Call Dave tomorrow at 5pm", and select the "n" template to capture the task with the correct schedule. Deadlines are automatically detected during capture via keywords (e.g., "due Friday", "deadline in 3 days", "by tomorrow").
+Deadlines are automatically detected during capture via keywords (e.g., "due Friday", "deadline in 3 days", "by tomorrow").
 
 ** License
 GPLv3. See LICENSE for details.
